# uninest

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  HYBRID_SEARCH_IMPROVEMENTS.md  PROPERTY_IMAGES_FIX_SUMMARY.md  README.md  SYNTHETIC_USERS_README.md  SYNTHETIC_USERS_SUMMARY.md  TODO.md  create_property_images_sql.py  create_synthetic_users.py  debug_frontend_logic.js  docker-compose.yml  fix_property_images.py  frontend_image_fix.js  image_analysis_results.json  image_migration.sql  login_test_results.json  migrate_api_images.py  proposal.md  proposal_impact_log.md  quick_user_registration.py  register_test_users.py  run_image_migration.py  synthetic_users_requirements.txt  test_image_fix.py  test_recommendations_endpoint.sh  test_user_login.py  user_registration_results.json  verify_image_fix.py
backend/: .gitignore  Dockerfile  FEATURE_AI_ENRICHMENT_AND_PRICE_RANKING.md  HIGHARC_UPGRADE.md  METRICS_EXPLANATION.md  README.md  alembic.ini  pyproject.toml  requirements-minimal.txt  requirements.txt  test_bm25.py
backend/ai_gateway_demo/: Dockerfile  README.md  agent.py  bench_concurrency.py  cache.py  embedding_service.py  gateway.py  middleware.py  repository.py  schemas.py  test_agent.py  test_gateway.py  test_middleware.py  test_search.py  tools.py
backend/app/: auth.py  chat.py  config.py  database.py  main.py  main_new.py  metrics.py  models.py  recommendations.py  schemas.py
backend/benchmark_results/: .gitkeep
backend/scripts/: README.md  README_BENCHMARKS.md  benchmark_hybrid_search.py  compare_benchmarks.py  diagnose_bm25.py  (+5 more)
(+103 files in other folders)
