[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
# third-party libs without type stubs (e.g. sentence_transformers) should not fail the build
ignore_missing_imports = true
